# PyRecEst

./: .jscpd.json  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-healpy.txt  requirements-jax.txt  requirements-min.txt  requirements-pytorch.txt  requirements.txt  tmp_count_check3.py  tmp_runtime_patch_probe.py  tmp_write_probe.txt
.github/: apply_top_k_fix.py  tracker-cap-validation-trigger.txt
.github/ci-refresh/: 4448.txt
.github/workflows/: agent-fix-gm-phd-likelihood.yml  agent-fix-pytorch-linspace-device.yml  agent-preserve-daum-huang-weights.yml  agent-reject-nonfinite-affine-transform.yml  apply-assignment-autograd-fix.yml  apply-top-k-duplicate-fix.yml  apply-tracker-cap-validation.yml  backend-first-failure.yml  diagnose-merwe-numpy.yml  jax-first-failure.yml  one-shot-tracklet-cost-validation.yml  run-tracklet-viterbi-state-fix-on-pr.yml  temporary-first-failure.yml
benchmarks/: README.md  low_rank_hypertoroidal_fourier.py
examples/basic/: dp_extended_target_subclustering.py  nonparametric_cardinality_priors.py  survival_aware_crp_association_prior.py
examples/experimental/: multisensor_ddp_association.py
patches/: low_rank_scalar_shape_fix.patch
scripts/: check_benchmark_regression.py  check_public_api_registry.py
src/pyrecest/: __init__.py  _backend_runtime_patches.py  _backend_submodules.py  _pytorch_dot_contract.py  api_registry.py  backend_tools.py  cli.py  diagnostics.py  evidence.py  exceptions.py  numerics.py  reproducibility.py  scenarios.py  stability.py
tests/: test_additive_cost_matrix_adjustment_ownership.py  test_affine_transform_algebra.py  test_affine_transform_homogeneous_matrix_jax.py  test_api_registry.py  test_association_feature_real_validation.py  test_autograd_vmap_contract.py  test_axis_labels.py  test_backend_arraylike_contracts.py  test_backend_capabilities.py  test_backend_contract.py  test_backend_jax_dtype_contract.py  test_backend_reduction_keepdims_contract.py  test_backend_set_diag_contract.py  test_backend_squeeze_axis_contract.py  test_backend_std_contract.py  test_backend_tools.py  test_benchmark_regression_limits.py  test_candidate_pruning_configured_nan_costs.py  test_candidate_pruning_diagnostics.py  test_candidate_pruning_temporal_scalars.py  test_candidate_pruning_unpruned_max_cost.py  test_cli.py  test_cli_final_estimate_validation.py  test_cli_tolerance_validation.py  test_common_reduction_axis_scalar.py  test_common_reduction_axis_validation.py  test_common_size_axis_validation.py  test_cost_matrix_adjustment_diagnostics.py  test_cost_matrix_adjustment_nan_validation.py  test_cost_matrix_adjustment_penalty_copy.py  test_cost_matrix_adjustment_result_validation.py  test_cost_matrix_adjustment_temporal_validation.py  test_cost_matrix_adjustments.py  test_deprecation_helper.py  test_dynamic_models.py  test_eot_shape_sample_counts.py  test_evaluate_for_file_measurement_counts.py  test_evaluation_reload.py  test_evaluation_seed_generation.py  test_evaluation_summarize_filter_results.py  (+70 more)
tests/backend/: test_jax_array_from_sparse_duplicates.py  test_jax_dtype_aliases.py  test_jax_random_multivariate_normal_keywords.py  test_numpy_linalg_empty_matrix_functions.py  test_numpy_linalg_qr_modes.py  test_numpy_random_probability_normalization.py  test_numpy_random_size_validation.py  test_numpy_random_uniform_validation.py  test_numpy_sylvester_empty_batches.py  test_numpy_uniform_ragged_bounds.py  test_pytorch_choice_scalar_population.py  test_pytorch_comparison_device_contract.py  test_pytorch_flip_axis_contract.py  test_pytorch_probability_underflow.py  test_pytorch_randint_scalar_precision.py  test_pytorch_random_backend.py  test_pytorch_random_dtype_aliases.py  test_pytorch_random_multivariate_normal_keywords.py  test_pytorch_random_scalar_inputs.py  test_pytorch_signal_bool_axes.py  test_pytorch_sylvester_empty_batches.py
tests/backend_support/: conftest.py  test_common_dot_contract.py  test_common_pytorch_reduction_axis_scalars.py  test_diagonal_bool_axes.py  test_gaussian_scalar_logpdf_contract.py  test_get_slice_contract.py  test_jax_argsort_arraylike_contract.py  test_jax_array_from_sparse_contract.py  test_jax_assignment_contract.py  test_jax_assignment_empty_indices_contract.py  test_jax_fft_array_length_contract.py  test_jax_linalg_contract.py  (+111 more)
(+518 files in other folders)
