[tool.poetry]
name = "pyrecest"
description = "Framework for recursive Bayesian estimation in Python."
readme = "README.md"
authors = ["Florian Pfaff <pfaff@ias.uni-stuttgart.de>"]
version = "2.4.2"
include = ["src/pyrecest/py.typed"]
license = "MIT"
keywords = [
  "bayesian-filtering",
  "recursive-estimation",
  "tracking",
  "multi-target-tracking",
  "manifolds",
  "directional-statistics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]

[tool.poetry.urls]
Homepage = "https://github.com/FlorianPfaff/PyRecEst"
Documentation = "https://florianpfaff.github.io/PyRecEst/"
Repository = "https://github.com/FlorianPfaff/PyRecEst"
Issues = "https://github.com/FlorianPfaff/PyRecEst/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
 
[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = ">=2.0,<2.5"
scipy = ">=1.14,<1.18"
matplotlib = ">=3.8,<4.0"
mpmath = ">=1.3,<1.4"
pyshtools = ">=4.12,<5.0"
beartype = ">=0.18,<0.23"
shapely = ">=2.0,<3.0"
healpy = { version = ">=1.17,<2.0", optional = true }
torch = { version = ">=2.4,<3.0", optional = true }
jax = { version = ">=0.4.30,<0.11", optional = true }
jaxlib = { version = ">=0.4.30,<0.11", optional = true }
autograd = { version = ">=1.7,<2.0", optional = true }

[tool.poetry.scripts]
pyrecest = "pyrecest.cli:main"

[tool.poetry.extras]
healpy_support = ["healpy"]
pytorch_support = ["torch"]
jax_support = ["jax", "jaxlib", "autograd"]
all_support = ["healpy", "torch", "jax", "jaxlib", "autograd"]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
pytest = ">=8,<10"
pytest-cov = ">=5,<8"
parameterized = ">=0.9,<1.0"
nox = ">=2024.10,<2027.0"
pytest-benchmark = ">=4.0,<6.0"
asv = ">=0.6,<1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = { version = "^1.0.4", extras = ["python"] }

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "pyrecest.diagnostics",
  "pyrecest.reproducibility",
  "pyrecest.scenarios",
]
disallow_untyped_defs = true
warn_return_any = true

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["F821", "F822", "F823"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:mpmath.*",
    "ignore::scipy.optimize.OptimizeWarning",
    "ignore:'return' in a 'finally' block:SyntaxWarning:autograd\\.wrap_util",
]
markers = [
    "numerical_stress: slower numerical stability and ill-conditioning checks",
    "benchmark: optional performance benchmark tests",
    "backend_portable: subprocess-based checks that verify import-time backend portability",
    "doc_example: executable documentation examples",
    "validation: closed-form or reference-result algorithm validation tests",
]

[tool.coverage.run]
branch = true
source = ["pyrecest"]
omit = [
  "*/tests/*",
  "*/benchmarks/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 20
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = ["pyrecest.backend", "healpy", "torch", "jax", "jaxlib"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "redefined-builtin",
  "cyclic-import",
  "too-many-locals",
  "too-many-return-statements",
  "too-many-branches",
  "too-many-statements",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-instance-attributes",
  "duplicate-code",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0
